[package]
name = "dcsv"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["csv", "cli", "text-processing"]
categories = ["text-processing"]
description = "Dyanmic csv reader,writer,editor"
homepage = "https://github.com/simhyeon/dcsv"
repository = "https://github.com/simhyeon/dcsv"
readme = "README.md"

[dependencies]
regex = "1.5.4"
